--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <base href="/">
     <meta charset="utf-8">
     <title>Online Poker</title>
@@ -8,27 +9,28 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body ng-app="app">
+</head>
+
+<body ng-app="app">
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+        <div class="navbar navbar-default" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Online Poker</a>
-          </div>
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-          </div>
+                    <a class="navbar-brand" href="/">在线斗牛</a>
+                </div>
+                <div class="collapse navbar-collapse" id="js-navbar-collapse">
+                </div>
+            </div>
         </div>
-      </div>
     </div>
     <div class="container">
-      <div ng-view></div>
+        <div ng-view></div>
     </div>
 
     <!-- Socket.io JS file -->
@@ -49,5 +51,6 @@
     <script src="join/join.Ctrl.js"></script>
     <script src="main/main.Ctrl.js"></script>
     <script src="components/socket.Srvc.js"></script>
-  </body>
+</body>
+
 </html>
