--- a/public/join/join.html
+++ b/public/join/join.html
@@ -1,20 +1,15 @@
 <div class="row marketing">
-  <div class="col-md-12">
-    <div class="panel panel-default panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title">Join Room</h3>
-      </div>
-      <form class="panel-body ng-pristine ng-valid" ng-submit="join()">
-        <label>
-          Name
-        </label>
-        <input class="input-lg form-control ng-pristine ng-valid"
-                    maxlength="20"
-                    ng-model="name"
-                    type="text">
-        <br>
-        <input class="btn btn-block btn-primary" type="submit" value="Join">
-      </form>
+    <div class="col-md-12">
+        <div class="panel panel-default panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">加入房间</h3>
+            </div>
+            <form class="panel-body ng-pristine ng-valid" ng-submit="join()">
+                <label>昵称</label>
+                <input class="input-lg form-control ng-pristine ng-valid" maxlength="20" ng-model="name" type="text">
+                <br>
+                <input class="btn btn-block btn-primary" type="submit" value="加入">
+            </form>
+        </div>
     </div>
-  </div>
 </div>
