Add new functions

--- a/public/join/join.html
+++ b/public/join/join.html
@@ -3,6 +3,7 @@
         <div class="panel panel-default panel-primary">
             <div class="panel-heading">
                 <h3 class="panel-title">加入房间</h3>
+                <p class="text-danger">{{error}}</p>
             </div>
             <form class="panel-body ng-pristine ng-valid" ng-submit="join()">
                 <label>昵称</label>
