Add start and end event

--- a/public/main/main.html
+++ b/public/main/main.html
@@ -41,6 +41,7 @@
                     <option value="prestart" ng-show="role=='banker'">即将发牌</option>                   
                     <option value="start" ng-show="role=='banker'">开始发牌</option>
                     <option value="nobanker" ng-show="role=='banker'">停止坐庄</option>
+                    <option value="end" ng-show="role=='bankerfrozen'">计分并结束</option>
                 </select>
                 <span class='input-group-btn'>
                     <input class='input-sm btn btn-default' type='submit' value='执行'>
