--- a/public/main/main.html
+++ b/public/main/main.html
@@ -19,7 +19,7 @@
                     <td>{{user.role}}</td>
                     <td>{{user.status}}</td>
                     <td>{{user.stake}}</td>
-                    <td>{{user.cards}}</td>
+                    <td>{{user.cardsDesc}}</td>
                 </tr>
             </tbody>
         </table>
