--- a/public/main/main.html
+++ b/public/main/main.html
@@ -31,17 +31,17 @@
         <form ng-submit='sendCtrlMessage()'>
             <div class='input-group'>
                 <select class="input-sm form-control" ng-model="ctrlmessage" placeholder="选择操作……">
-                    <option value="1" ng-show="role=='player'">下注+1</option>
-                    <option value="2" ng-show="role=='player'">下注+2</option>
-                    <option value="5" ng-show="role=='player'">下注+5</option>
-                    <option value="10" ng-show="role=='player'">下注+10</option>
-                    <option value="0" ng-show="role=='player'">下注清0</option>
-                    <option value="ready" ng-show="role=='player'">买定离手</option>
-                    <option value="banker" ng-show="role=='nobanker'">庄家开局</option>
-                    <option value="prestart" ng-show="role=='banker'">即将发牌</option>                   
-                    <option value="start" ng-show="role=='banker'">开始发牌</option>
-                    <option value="nobanker" ng-show="role=='banker'">停止坐庄</option>
-                    <option value="end" ng-show="role=='bankerfrozen'">计分并结束</option>
+                    <option value="1" ng-if="role=='player'">下注+1</option>
+                    <option value="2" ng-if="role=='player'">下注+2</option>
+                    <option value="5" ng-if="role=='player'">下注+5</option>
+                    <option value="10" ng-if="role=='player'">下注+10</option>
+                    <option value="0" ng-if="role=='player'">下注清0</option>
+                    <option value="ready" ng-if="role=='player'">买定离手</option>
+                    <option value="banker" ng-if="role=='nobanker'">庄家开局</option>
+                    <option value="prestart" ng-if="role=='banker'">即将发牌</option>                   
+                    <option value="start" ng-if="role=='banker'">开始发牌</option>
+                    <option value="nobanker" ng-if="role=='banker'">停止坐庄</option>
+                    <option value="end" ng-if="role=='bankerfrozen'">计分并结束</option>
                 </select>
                 <span class='input-group-btn'>
                     <input class='input-sm btn btn-default' type='submit' value='执行'>
